[gd_scene load_steps=6 format=2]

[ext_resource path="res://Mino/MinoLibrary.tres" type="MeshLibrary" id=1]
[ext_resource path="res://GridMap.gd" type="Script" id=2]
[ext_resource path="res://GridBack.tscn" type="PackedScene" id=3]
[ext_resource path="res://Mino/BackMaterial.tres" type="Material" id=4]

[sub_resource type="CubeMesh" id=1]

material = ExtResource( 4 )
custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector3( 1, 1, 1 )
subdivide_width = 0
subdivide_height = 0
subdivide_depth = 0

[node name="GridMap" type="GridMap" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.657175, -0.5, -1 )
theme = ExtResource( 1 )
cell_size = Vector3( 1, 1, 2 )
cell_octant_size = 8
cell_center_x = false
cell_center_y = false
cell_center_z = false
cell_scale = 1.0
collision_layer = 1
collision_mask = 1
data = {
"cells": PoolIntArray( 13, 0, 0, 65543, 0, 0 )
}
script = ExtResource( 2 )
_sections_unfolded = [ "Cell", "Transform" ]
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 3, 0 )
}
NB_LINES = 20
NB_COLLUMNS = 10

[node name="DropTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="LockDelay" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="AutoShiftDelay" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="AutoShiftTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.03
one_shot = false
autostart = true

[node name="HardDropTimer" type="Timer" parent="." index="4"]

process_mode = 0
wait_time = 0.01
one_shot = false
autostart = false

[node name="ExplosionDelay" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="GridBack" parent="." index="6" instance=ExtResource( 3 )]

transform = Transform( 10, 0, 0, 0, 20, 0, 0, 0, 0.1, 4.5, 9.5, -1 )
mesh = SubResource( 1 )

[node name="HoldBack" parent="." index="7" instance=ExtResource( 3 )]

transform = Transform( 7, 0, 0, 0, 7, 0, 0, 0, 0.1, -5, 16, -1 )
mesh = SubResource( 1 )

[node name="NextBack" parent="." index="8" instance=ExtResource( 3 )]

transform = Transform( 7, 0, 0, 0, 7, 0, 0, 0, 0.1, 14, 16, -1 )
mesh = SubResource( 1 )

[connection signal="timeout" from="DropTimer" to="." method="_on_DropTimer_timeout"]

[connection signal="timeout" from="LockDelay" to="." method="_on_LockDelay_timeout"]

[connection signal="timeout" from="AutoShiftDelay" to="." method="_on_AutoShiftDelay_timeout"]

[connection signal="timeout" from="AutoShiftTimer" to="." method="_on_AutoShiftTimer_timeout"]

[connection signal="timeout" from="HardDropTimer" to="." method="_on_HardDropTimer_timeout"]

[connection signal="timeout" from="ExplosionDelay" to="." method="_on_ExplosionDelay_timeout"]


