[gd_scene load_steps=8 format=2]

[ext_resource path="res://Mino/MinoLibrary.tres" type="MeshLibrary" id=1]
[ext_resource path="res://GridMap/GridMap.gd" type="Script" id=2]
[ext_resource path="res://GridMap/GridBack.tscn" type="PackedScene" id=3]
[ext_resource path="res://GridMap/BackMaterial.tres" type="Material" id=4]
[ext_resource path="res://Tetrominos/GhostPiece.tscn" type="PackedScene" id=5]
[ext_resource path="res://midi/MidiPlayer.tscn" type="PackedScene" id=6]

[sub_resource type="CubeMesh" id=1]

material = ExtResource( 4 )
custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector3( 1, 1, 1 )
subdivide_width = 0
subdivide_height = 0
subdivide_depth = 0

[node name="GridMap" type="GridMap" index="0"]

theme = ExtResource( 1 )
cell_size = Vector3( 1, 1, 1 )
cell_octant_size = 8
cell_center_x = false
cell_center_y = false
cell_center_z = false
cell_scale = 1.0
collision_layer = 1
collision_mask = 1
data = {
"cells": PoolIntArray( 13, 0, 0, 65543, 0, 0 )
}
script = ExtResource( 2 )
_sections_unfolded = [ "Cell", "Transform" ]
__meta__ = {
"_editor_clip_": 1,
"_editor_floor_": Vector3( 0, 1, 0 )
}

[node name="DropTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="LockDelay" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="AutoShiftDelay" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.17
one_shot = true
autostart = false

[node name="AutoShiftTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.02
one_shot = false
autostart = true

[node name="GridBack" parent="." index="4" instance=ExtResource( 3 )]

transform = Transform( 10, 0, 0, 0, 20, 0, 0, 0, 0.1, 4.5, 9.5, -1 )
mesh = SubResource( 1 )

[node name="HoldBack" parent="." index="5" instance=ExtResource( 3 )]

transform = Transform( 7, 0, 0, 0, 7, 0, 0, 0, 0.1, -5, 16, -1 )
mesh = SubResource( 1 )

[node name="NextBack" parent="." index="6" instance=ExtResource( 3 )]

transform = Transform( 7, 0, 0, 0, 7, 0, 0, 0, 0.1, 14, 16, -1 )
mesh = SubResource( 1 )

[node name="GhostPiece" parent="." index="7" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 20, 0 )
_sections_unfolded = [ "Pause", "Transform" ]

[node name="MidiPlayer" parent="." index="8" instance=ExtResource( 6 )]

file = "res://midi/Tetris - Song A.mid"
volume_db = -24
loop = true
loop_start = 1.81
soundfont = "res://midi/FluidR3 GM.sf2"

[node name="LineCLearTimer" type="Timer" parent="MidiPlayer" index="1"]

process_mode = 1
wait_time = 1.41
one_shot = true
autostart = false

[connection signal="timeout" from="DropTimer" to="." method="_on_DropTimer_timeout"]

[connection signal="timeout" from="LockDelay" to="." method="_on_LockDelay_timeout"]

[connection signal="timeout" from="AutoShiftDelay" to="." method="_on_AutoShiftDelay_timeout"]

[connection signal="timeout" from="AutoShiftTimer" to="." method="_on_AutoShiftTimer_timeout"]

[connection signal="timeout" from="MidiPlayer/LineCLearTimer" to="." method="_on_LineCLearTimer_timeout"]


